<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layout_bg_color"
        tools:context=".LoginActivity">

    <LinearLayout
            android:id="@+id/img_cont"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/input_layout_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/wonderland_icon_drawable" />

        <TextView
                android:id="@+id/lblWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/lbl_login_welcome"
                android:textColor="@color/lbl_welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_cont"
                tools:ignore="MissingConstraints" />

        <!--android:layout_marginStart="20dp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->

    </LinearLayout>

    <!--<TextView-->
    <!--android:id="@+id/lblWelcome"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="27dp"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:text="@string/lbl_login_welcome"-->
    <!--android:textColor="@color/lbl_welcome"-->
    <!--android:textSize="35sp"-->
    <!--android:textStyle="bold"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/img_cont"-->
    <!--tools:ignore="MissingConstraints" />-->

    <!--<TextView-->
    <!--android:id="@+id/lblContinueLogin"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/lbl_login_continue_login"-->
    <!--android:textColor="@color/lbl_login_continue"-->
    <!--android:textSize="18dp"-->
    <!--app:layout_constraintStart_toStartOf="@+id/lblWelcome"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/lblWelcome"-->
    <!--tools:ignore="MissingConstraints" />-->

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_cont">

        <EditText
                android:id="@+id/txtLogin_Username"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/txt_login_email"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:singleLine="false"
                android:textColor="@android:color/background_dark"
                android:textColorLink="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_cont"
                tools:ignore="MissingConstraints" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_email">

        <EditText
                android:id="@+id/txtLogin_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/txt_login_password"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/background_dark"
                android:textColorLink="@android:color/background_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email" />

    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_style"
            android:fontFamily="@font/cairo_semibold"
            android:text="@string/btn_login"
            android:textColor="@android:color/background_light"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
            tools:ignore="MissingConstraints" />

    <!--<Button-->
    <!--android:id="@+id/btnLogin_ForgotPassword"-->
    <!--android:layout_width="110dp"-->
    <!--android:layout_height="20dp"-->
    <!--android:layout_marginEnd="20dp"-->
    <!--android:background="@android:color/transparent"-->
    <!--android:text="@string/btn_forgot_password"-->
    <!--android:textSize="10dp"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toBottomOf="@+id/input_layout_password" />-->

    <!--<TextView-->
    <!--android:id="@+id/lblRegister"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:layout_marginStart="20dp"-->
    <!--android:text="@string/lbl_login_register"-->
    <!--android:textSize="18sp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--tools:ignore="MissingConstraints" />-->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/btnLogin_ForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/btn_forgot_password"
                android:textSize="12dp"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <TextView
                android:id="@+id/lbl_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="l"
                android:gravity="center"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="463dp"
                tools:ignore="MissingConstraints"
                app:layout_constraintStart_toEndOf="@+id/btnLogin_ForgotPassword"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>

        <Button
                android:id="@+id/btnLogin_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/btn_sign_up"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/lbl_block"
                app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>