<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical"
        android:background="@color/layout_bg_color"
        tools:context=".RegistrationActivity">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!--<LinearLayout-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginTop="60dp"-->
        <!--android:background="@drawable/img_bg_shape">-->

        <Button
                android:id="@+id/btn_insert_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/cam_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_insert_img"
                app:layout_constraintStart_toStartOf="@+id/btn_insert_img"
                app:layout_constraintTop_toTopOf="@+id/btn_insert_img"
                app:layout_constraintBottom_toBottomOf="@+id/btn_insert_img"/>

        <TextView
                android:id="@+id/lblAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Add your profile picture"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/circleImageView" />

        <!--</LinearLayout>-->

        <!--<ImageView-->
        <!--android:id="@+id/imageView"-->
        <!--android:layout_width="120dp"-->
        <!--android:layout_height="120dp"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_gravity="center"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--app:srcCompat="@drawable/baseline_add_a_photo_black_18dp" />-->

        <TextView
                android:id="@+id/lblsignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="monospace"
                android:text="@string/lbl_register"
                android:textColor="@color/lbl_welcome"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblAddImage"
                app:layout_constraintEnd_toEndOf="parent"/>



        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblsignup">

            <EditText
                    android:id="@+id/txtRegister_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="170dp"
                    android:ems="10"
                    android:hint="@string/txt_register_username"
                    android:inputType="textPersonName"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_username">

            <EditText
                    android:id="@+id/txtRegister_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/txt_register_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_username"
                    tools:ignore="MissingConstraints" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_email">

            <EditText
                    android:id="@+id/txtRegister_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/txt_register_password"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_email"
                    tools:ignore="MissingConstraints" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_password">

            <EditText
                    android:id="@+id/txtRegister_Confirm_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/txt_register_confirm_password"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_password"
                    tools:ignore="MissingConstraints" />

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:background="@drawable/button_style"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/btn_register"
                android:textColor="@android:color/background_light"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password" />

        <!--<TextView-->
        <!--android:id="@+id/lblAlreadyGotAccount"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="30dp"-->
        <!--android:layout_marginStart="20dp"-->
        <!--android:text="@string/lbl_already_have_account"-->
        <!--android:textSize="18sp"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--tools:ignore="MissingConstraints" />-->

        <TextView
                android:id="@+id/lbl_block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="14dp"
                android:textSize="45dp"
                android:text="l"
                android:gravity="center"
                tools:layout_editor_absoluteX="245dp"
                tools:layout_editor_absoluteY="463dp"
                app:layout_constraintStart_toEndOf="@+id/btnRegister"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password"/>

        <Button
                android:id="@+id/btnRegister_SignIn"
                android:layout_width="70dp"
                android:layout_height="23dp"
                android:layout_marginBottom="33dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:text="@string/btn_sign_in"
                android:textColor="@color/btn_sign_up"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/input_layout_confirm_password"
                app:layout_constraintStart_toEndOf="@+id/lbl_block" />

        <!--android.support.constraint.ConstraintLayout-->
    </android.support.constraint.ConstraintLayout>

</ScrollView>